fix object mapper issues, use json mapper